--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="description" content="this is Mel's website" />
     <title>Mel's Website</title>
+      <style>
+          body {
+              background-color: #100D26;
+              color: #483d8b;
+          }
+      </style>
   </head>
   <body>
     <table>
