Added styles to all pages
Color changes, added portfolio images.

--- a/about.html
+++ b/about.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="description" content="this is Mel's website" />
     <title>About</title>
+    <link rel="stylesheet" href="style.css">
+
   </head>
   <body>
     <table>
