Added game pages
Modified all pages for consistency. Modified styles. Added images to portfolio.

--- a/CERESAbout.html
+++ b/CERESAbout.html
@@ -1,14 +1,15 @@
+<!-- include cool stuff about the game here please-->
 <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="description" content="this is Mel's website" />
-    <title>Portfolio</title>
+    <title>AboutCERES</title>
     <link rel="stylesheet" href="style.css">
-
+      
   </head>
   <body>
-<table>
+    <table>
       <tr>
         <td>
             <img src="images/lunalarkicon01.png" alt="Mel's logo" width="200px"  class="rounded" class="logo"/>
@@ -16,8 +17,7 @@
         </td>
         <td>
           <h1>Mel McClure</h1>
-          <h2><em>Illustrator, Game and Web developer.</em></h2>
-        </td>
+  <h2><em>Illustrator, Game and Web developer.</em></h2>        </td>
       </tr>
     </table>
     <table class="nav" class="rounded">
@@ -36,12 +36,18 @@
             </td>
         </tr>
 </table>
+    
 
-    <h2>Store</h2>
-    <a href="form.html">Commission Form</a>
-      <br>
-      <br>
-    <h3>Available Prints</h3>
-      <p>Nothing available right now!</p>
-  </body>
-</html>
+    <h2>About CERE:S</h2>
+<table>
+    <tr>
+    <td>
+        <img src="images/towerwip001.png" 
+                alt="CERE:S" class="icon" class="rounded"/>
+    </td>
+        <td>
+            <strong>CERE:S</strong> is an educational first-person science fiction game available on Steam. Subjects including mathematics, physics, biology and computer science are available to learn and practice by children, teens, and adults.
+        </td>
+    </tr>
+</table>
+</body>
