--- a/SpinnyAbout.html
+++ b/SpinnyAbout.html
@@ -1,14 +1,16 @@
+<!-- include cool stuff about the game here please
+put some character bios?-->
 <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="description" content="this is Mel's website" />
-    <title>Portfolio</title>
+    <title>AboutYINA</title>
     <link rel="stylesheet" href="style.css">
-
+      
   </head>
   <body>
-<table>
+    <table>
       <tr>
         <td>
             <img src="images/lunalarkicon01.png" alt="Mel's logo" width="200px"  class="rounded" class="logo"/>
@@ -16,8 +18,7 @@
         </td>
         <td>
           <h1>Mel McClure</h1>
-          <h2><em>Illustrator, Game and Web developer.</em></h2>
-        </td>
+  <h2><em>Illustrator, Game and Web developer.</em></h2>        </td>
       </tr>
     </table>
     <table class="nav" class="rounded">
@@ -36,12 +37,18 @@
             </td>
         </tr>
 </table>
+    
 
-    <h2>Store</h2>
-    <a href="form.html">Commission Form</a>
-      <br>
-      <br>
-    <h3>Available Prints</h3>
-      <p>Nothing available right now!</p>
-  </body>
-</html>
+    <h2>About Spinny Adventures</h2>
+<table>
+          <tr>
+            <td>
+              <img src="images/halloweenspinny03.png" alt="Spinny Merryberry" class="icon" class="rounded"/>
+            </td>
+            <td>
+              <strong>Spinny Adventures</strong> is a third-person fantasy game available on Steam. You play as Spindelin "Spinny" Merryberry, a young farmer/handyperson/entreprenure/magician living in the coastal town of Birchvale.
+              </td>
+            </td>
+          </tr>
+      </table>
+    </body>
